--- a/class/html/practice/p2.html
+++ b/class/html/practice/p2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>폼요소 연습</title>
 </head>
 <body>
 
@@ -31,6 +31,7 @@
   </header>
 
   <nav>
+    <h2>네비게이션 영역</h2>
 
     <ul>
       <li>
@@ -103,6 +104,8 @@
   </nav>
 
   <section>
+
+    <h2>컨텐츠 영역</h2>
 
     <div>
       <span>
@@ -185,13 +188,13 @@
       <span>
         <input id="usage-terms" type="checkbox" />
         <label for="usage-terms">이용약관</label>
-        <spam>전문보기</spam>
+        <span>전문보기</span>
       </span>
 
       <span>
         <input id="service-terms" type="checkbox" />
         <label for="service-terms">서비스 이용약관</label>
-        <spam>전문보기</spam>
+        <span>전문보기</span>
       </span>
     </div>
 
@@ -199,7 +202,7 @@
       <span>
         <input id="private" type="checkbox" />
         <label for="private">개인정보 이용 동의</label>
-        <spam>전문보기</spam>
+        <span>전문보기</span>
       </span>
 
       <span>
