--- a/class/webpage/baskinrabins.html
+++ b/class/webpage/baskinrabins.html
@@ -60,239 +60,326 @@
   </header>
 
 
-  <nav class="nav">
+  <div class="nav-wrap">
 
-    <div class="small-wrap">
+    <nav class="nav">
+      <div class="small-wrap">
 
-      <ul class="nav-member">
-        <li class="nav-member-item"><a href="#" class="nav-member-link login">LOGIN</a></li>
-        <!-- [D] 로그인 되었을 때 표시되는 태그 라인 -->
-        <!--
-        <li class="nav-member-item"><a href="#" class="nav-member-link logout">LOGOUT</a></li>
-        -->
-        <li class="nav-member-item"><a href="#" class="nav-member-link join">JOIN</a></li>
-        <!-- [D] 로그인 되었을 때 표시되는 태그 라인 -->
-        <!--
-        <li lass="nav-member-item"><a href="#" class="nav-member-link mypage">MY PAGE</a></li>
-        -->
-      </ul>
+        <ul class="nav-member">
+          <li class="nav-member-item"><a href="#" class="nav-member-link login">LOGIN</a></li>
+          <!-- [D] 로그인 되었을 때 표시되는 태그 라인 -->
+          <!--
+          <li class="nav-member-item"><a href="#" class="nav-member-link logout">LOGOUT</a></li>
+          -->
+          <li class="nav-member-item"><a href="#" class="nav-member-link join">JOIN</a></li>
+          <!-- [D] 로그인 되었을 때 표시되는 태그 라인 -->
+          <!--
+          <li lass="nav-member-item"><a href="#" class="nav-member-link mypage">MY PAGE</a></li>
+          -->
+        </ul>
 
-      <ul class="gnb">
+        <ul class="gnb">
 
-        <li class="gnb-depth1-item flavor">
-          <a href="" class="gnb-depth1-link flavor">FLAVOR OF THE MONTH</a>
-          <ul class="gnb-depth2 img">
-            <li class="gnb-depth2-item">
-              <a href="" class="gnb-depth2-link"><img src="images/img_month_1607.png" alt="welcome to the jungle"></a>
-            </li>
-          </ul>
-        </li>
+          <li class="gnb-depth1-item flavor">
+            <a href="" class="gnb-depth1-link flavor">FLAVOR OF THE MONTH</a>
+            <ul class="gnb-depth2 img">
+              <li class="gnb-depth2-item">
+                <a href="" class="gnb-depth2-link"><img src="images/img_month_1607.png" alt="welcome to the jungle"></a>
+              </li>
+            </ul>
+          </li>
 
-        <li class="gnb-depth1-item menu">
-          <a href="" class="gnb-depth1-link menu">MENU</a>
-          <ul class="gnb-depth2">
-            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">아이스크림</a></li>
-            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">아이스크림케이크</a></li>
-            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">음료</a></li>
-            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">커피</a></li>
-            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">디저트</a></li>
-          </ul>
-        </li>
+          <li class="gnb-depth1-item menu">
+            <a href="" class="gnb-depth1-link menu">MENU</a>
+            <ul class="gnb-depth2">
+              <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">아이스크림</a></li>
+              <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">아이스크림케이크</a></li>
+              <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">음료</a></li>
+              <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">커피</a></li>
+              <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">디저트</a></li>
+            </ul>
+          </li>
 
-        <li class="gnb-depth1-item event">
-          <a href="" class="gnb-depth1-link event">EVENT</a>
-          <ul class="gnb-depth2">
-            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">진행중이벤트</a></li>
-            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">당첨자발표</a></li>
-          </ul>
-        </li>
+          <li class="gnb-depth1-item event">
+            <a href="" class="gnb-depth1-link event">EVENT</a>
+            <ul class="gnb-depth2">
+              <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">진행중이벤트</a></li>
+              <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">당첨자발표</a></li>
+            </ul>
+          </li>
 
-        <li class="gnb-depth1-item store">
-          <a href="" class="gnb-depth1-link store">STORE</a>
-          <ul class="gnb-depth2">
-            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">매장찾기</a></li>
-            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">고객센터</a></li>
-          </ul>
-        </li>
+          <li class="gnb-depth1-item store">
+            <a href="" class="gnb-depth1-link store">STORE</a>
+            <ul class="gnb-depth2">
+              <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">매장찾기</a></li>
+              <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">고객센터</a></li>
+            </ul>
+          </li>
 
-        <li class="gnb-depth1-item about">
-          <a href="" class="gnb-depth1-link about">ABOUT</a>
-          <ul class="gnb-depth2">
-            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">공지사항</a></li>
-            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">보도자료</a></li>
-            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">채용정보</a></li>
-            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">점포개설문의</a></li>
-            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">CONTACT US</a></li>
-          </ul>
-        </li>
-      </ul>
+          <li class="gnb-depth1-item about">
+            <a href="" class="gnb-depth1-link about">ABOUT</a>
+            <ul class="gnb-depth2">
+              <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">공지사항</a></li>
+              <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">보도자료</a></li>
+              <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">채용정보</a></li>
+              <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">점포개설문의</a></li>
+              <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">CONTACT US</a></li>
+            </ul>
+          </li>
+        </ul>
 
-    </div>
+      </div>
+    </nav>
 
     <div class="gnb-bg"></div>
-  </nav>
+
+  </div>
 
   <div>
-    <img src="images/img_flaovr_month_top.jpg" alt="Jungle"/>
+    <a href="#" class="banner-top">Flavor of the Month</a>
   </div>
 
   <section>
-    <div>
-      <img src="images/img_main_banner_10.jpg" alt="이벤트">
-    </div>
 
     <div>
-      <h2>
-      <img src="images/h_event.png" alt="이벤트"/>
-      </h2>
+      <a href="#" class="banner-bottom">뤨컴 투더 정글 사진을 인스타그램에 올려주세요</a>
     </div>
 
-    <div>
-      <ul>
-        <li>
-          <a href="#" title="cafe bris">
-            <img src="images/u.JPG" alt="이벤트">
-          </a>
-          <div>
-            <ul>
-              <li><a href="#" title="STORE EVENT">
-                <img src="images/stit_store.gif" alt="STORE EVENT">
-              </a>
-              </li>
-              <li><a href="#">Summer Snow CAFE BRIS</a></li>
-              <li><a href="#">상시진행</a></li>
-            </ul>
-          </div>
-        </li>
-        <li>
-          <a href="#" title="베스킨라빈스 혜택">
-            <img src="images/g.JPG" alt="이벤트">
-          </a>
-          <div>
-            <ul>
-              <li><a href="#" title="STORE EVENT">
-                  <img src="images/stit_store.gif" alt="STORE EVENT">
-              </a>
-              </li>
-              <li><a href="#">제휴 할인 카드 혜택 안내</a></li>
-              <li><a href="#">상시진행</a></li>
-            </ul>
-          </div>
-        </li>
-        <li>
-          <a href="#" title="happy order">
-            <img src="images/oo.JPG" alt="이벤트">
-          </a>
-          <div>
-            <ul>
-              <li><a href="#" title="HAPPYPOINT EVENT">
-                <img src="images/stit_happypoint.gif" alt="HAPPYPOINT EVENT">
-              </a>
-              </li>
-              <li><a href="#">해피오더에서만 만날 수 있는 그랜드, 해피팍스!</a></li>
-              <li><a href="#">상시진행</a></li>
-            </ul>
-          </div>
-        </li>
-        <li>
-          <a href="#" title="SIZE UP">
-            <a href="#"><img src="images/u.JPG" alt="이벤트"></a>
-          </a>
+    <section class="br-event">
+      <div class="small-wrap">
+        <h2 class="br-event-heading">BR EVENT</h2>
 
-          <div>
-            <ul>
-              <li><a href="#" title="SIZE UP">
-                    <img src="images/stit_store.gif" alt="이벤트">
-                  </a>
-              </li>
-              <li><a href="#">31DAY! 패밀리를 하프갤런으로 사이즈 업!</a></li>
-              <li><a href="#">상시진행</a></li>
-            </ul>
-          </div>
-        </li>
-      </ul>
-    </div>
+        <ul class="event-list">
 
-    <div>
-      <img src="images/h_event.png" alt="BR MENU"/>
-    </div>
+          <li class="event-list-item">
+            <dl class="event-item-module">
+              <dt class="event-item-title">
+                <a href="#"><img src="images/1454744084.png" alt="31DAY! 패밀리를 하프갤런으로 사이즈 업!" /></a>
+              </dt>
+              <dd class="event-item-text ir-store-event">STORE EVENT</dd>
+              <dd class="event-item-text"><a href="#">31DAY! 패밀리를 하프갤런으로 사이즈 업!</a></dd>
+              <dd class="event-item-text">상시 진행</dd>
+            </dl>
+          </li>
 
-    <div>
-      <ul>
-        <li>
-          <a href="#" title="ICECREAM">
-            <img src="images/img_menu_list_03.png"  alt="ICECREAM">
-          </a>
-          <div>
-            <ul>
-              <li><a href="#">ICECREAM</a></li>
-              <li><a href="#">프리미엄 아이스크림의 기준, 베스킨라빈스</a></li>
-            </ul>
-          </div>
-        </li>
-        <li>
-          <a href="#" title="BAVERAGE">
-          <a href="#"><img src="images/img_menu_list_05.png"  alt="BAVERAGE"></a>
-          </a>
-          <div>
-            <ul>
-              <li><a href="#">BAVERAGE</a></li>
-              <li><a href="#">아이스크림으로 즐기는 베스킨라빈스만의 음료!</a></li>
-            </ul>
-          </div>
-        </li>
+          <li class="event-list-item">
+            <dl class="event-item-module">
+              <dt class="event-item-title">
+                <a href="#"><img src="images/1454745114.png" alt="Summer Snow CAFE BRIS" /></a>
+              </dt>
+              <dd class="event-item-text ir-store-event">STORE EVENT</dd>
+              <dd class="event-item-text"><a href="#">Summer Snow CAFE BRIS</a></dd>
+              <dd class="event-item-text">상시 진행</dd>
+            </dl>
+          </li>
 
-        <li>
-          <a href="#" title="COFFEE">
-            <a href="#"><img src="images/img_menu_list_08.png"  alt="COFFEE"></a>
-          </a>
-          <div>
-            <ul>
-              <li><a href="#">COFFEE</a></li>
-              <li><a href="#">베스킨라빈스만의 부드러운 촉감과 달콤한 풍미!</a></li>
-            </ul>
-          </div>
-        </li>
+          <li class="event-list-item">
+            <dl class="event-item-module">
+              <dt class="event-item-title">
+                <a href="#"><img src="images/1467794853.png" alt="제휴 할인 카드 혜택 안내" /></a>
+              </dt>
+              <dd class="event-item-text ir-store-event">STORE EVENT</dd>
+              <dd class="event-item-text"><a href="#">제휴 할인 카드 혜택 안내</a></dd>
+              <dd class="event-item-text">상시 진행</dd>
+            </dl>
+          </li>
 
+          <li class="event-list-item last">
+            <dl class="event-item-module">
+              <dt class="event-item-title">
+                <a href="#"><img src="images/1454744830.png" alt="해피오더에서만 만날 수 있는 그랜드, 해피박스!" /></a>
+              </dt>
+              <dd class="event-item-text ir-happy-event">HAPPY POINT EVENT</dd>
+              <dd class="event-item-text"><a href="#">해피오더에서만 만날 수 있는 그랜드, 해피박스!</a></dd>
+              <dd class="event-item-text">상시 진행</dd>
+            </dl>
+          </li>
 
-        <li>
-          <a href="#" title="DESSERT">
-            <a href="#"><img src="images/img_menu_list_10.png"  alt="DESSERT"/></a>
-          </a>
-          <div>
-            <ul>
-              <li><a href="#">DESSERT</a></li>
-              <li><a href="#">아이스크림을 더욱이 재밌게! 간편하게 즐기는 방법!</a></li>
-            </ul>
-          </div>
-        </li>
+        </ul>
+      </div>
+    </section>
 
-        <li>
-          <a href="#" title="GIFT">
-            <a href="#"><img src="images/img_menu_list_09.png"  alt="GIFT"></a>
-          </a>
-          <div>
-            <ul>
-              <li><a href="#">GIFT</a></li>
-            </ul>
-          </div>
-        </li>
+    <section class="br-menu">
+      <div class="small-wrap">
+        <h2 class="br-menu-heading">BR MENU</h2>
 
-        <li>
-          <a href="#" title="ICECREAM CAKE">
-            <a href="#"><img src="images/img_menu_list_03-03.png"  alt="ICECREAM CAKE"/></a>
-          </a>
-          <div>
-            <ul>
-              <li><a href="#">ICECREAM CAKE</a></li>
-              <li><a href="#">아이와 어른이 좋아하는 아이스크림을 하나의 케이크에서 모두 즐기세요!</a></li>
-            </ul>
-          </div>
-        </li>
+        <ul class="menu-list">
 
-      </ul>
+          <li>
+            <dl>
+              <dt>ICECREAM</dt>
+              <dd>프리미엄 아이스크림의 기준, 베스킨라빈스</dd>
+            </dl>
+          </li>
+          <li>
+            <dl>
+              <dt>ICECREAM CAKE</dt>
+              <dd>아이와 어른이 좋아하는 아이스크림을 하나의 케이크에서 모두 즐기세요</dd>
+            </dl>
+          </li>
+          <li>
+            <dl>
+              <dt>BEVARAGE</dt>
+              <dd>아이스크림으로 즐기는 베스킨라빈스만의 음료</dd>
+            </dl>
+          </li>
+          <li>
+            <dl>
+              <dt>COFFEE</dt>
+              <dd>베스킨라빈스의 부드러운 촉감과 달콤한 풍미</dd>
+            </dl>
+          </li>
+          <li>
+            <dl>
+              <dt>DESSERT</dt>
+              <dd>아이스크림을 더욱 재미있게! 간편하게 즐기는 방법</dd>
+            </dl>
+          </li>
+          <li>
+            <dl>
+              <dt>GIFT</dt>
+            </dl>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <div class="small-wrap clearfix">
+
+      <section class="br-store">
+        <h2 class="br-store-heading">BR STORE</h2>
+
+        <a href="#" class="br-store-link" title="클릭시 매장찾기 페이지로 이동">
+          <span>내주변 가장 가까운 배스킨라빈스 매장을 찾아보세요!</span>
+          <span>다양한 즐거움과 새로움! 우리동네 배스킨라빈스!</span>
+        </a>
+      </section>
+
+      <section class="happy-order">
+        <h2 class="happy-order-heading">HAPPY ORDER & DELIVERY</h2>
+
+        <a href="#" class="happy-order-link" title="클릭시 사전 주문 페이지로 이동">
+          <span>배스킨라빈스 모바일 사전주문 & 배달 서비스</span>
+          <span>배달 콜센터 1670-3131</span>
+          <span>주문에서 결제 & 배송까지 간편하게</span>
+        </a>
+      </section>
 
     </div>
+
+    <section class="snsbox">
+
+      <div class="small-wrap">
+
+        <h2 class="snsbox-heading">SNS</h2>
+
+        <ul class="snsbox-list clearfix">
+
+          <li class="snsbox-list-item">
+            <a href="#" class="snsbox-list-link">
+              <img src="images/sns_facebook.png" alt="facebook" />
+            </a>
+          </li>
+
+          <li class="snsbox-list-item">
+            <a href="#" class="snsbox-list-link">
+              <img src="images/sns_twitter.png" alt="twitter" />
+            </a>
+          </li>
+
+          <li class="snsbox-list-item">
+            <a href="#" class="snsbox-list-link">
+              <img src="images/sns_blog.png" alt="blog" />
+            </a>
+          </li>
+
+          <li class="snsbox-list-item">
+            <a href="#" class="snsbox-list-link">
+              <img src="images/sns_instagram.png" alt="instagram" />
+            </a>
+          </li>
+
+        </ul>
+
+        <ul class="insta-list clearfix">
+
+          <li class="insta-list-item">
+            <a href="#">
+              <img src="images/13167345_128201254255622_510084311_n.jpg" alt="" />
+            </a>
+          </li>
+
+          <li class="insta-list-item">
+            <a href="#">
+              <img src="images/13167350_928734413902619_1927688809_n.jpg" alt="" />
+            </a>
+          </li>
+
+          <li class="insta-list-item">
+            <a href="#">
+              <img src="images/13249690_264158533935626_883210712_n.jpg" alt="" />
+            </a>
+          </li>
+
+          <li class="insta-list-item">
+            <a href="#">
+              <img src="images/13256853_1450409138318233_719438924_n.jpg" alt="" />
+            </a>
+          </li>
+
+          <li class="insta-list-item">
+            <a href="#">
+              <img src="images/13258895_597048220454157_979511717_n.jpg" alt="" />
+            </a>
+          </li>
+
+          <li class="insta-list-item">
+            <a href="#">
+              <img src="images/13259662_1731604950388115_31765600_n.jpg" alt="" />
+            </a>
+          </li>
+
+          <li class="insta-list-item">
+            <a href="#">
+              <img src="images/13267319_217654555287274_842354425_n.jpg" alt="" />
+            </a>
+          </li>
+
+          <li class="insta-list-item">
+            <a href="#">
+              <img src="images/13285314_614919445327966_1579472224_n.jpg" alt="" />
+            </a>
+          </li>
+
+          <li class="insta-list-item">
+            <a href="#">
+              <img src="images/13285364_1048694198547913_225446816_n.jpg" alt="" />
+            </a>
+          </li>
+
+          <li class="insta-list-item">
+            <a href="#">
+              <img src="images/13391182_1810083205880439_685077472_n.jpg" alt="" />
+            </a>
+          </li>
+
+          <li class="insta-list-item">
+            <a href="#">
+              <img src="images/13414358_543946162455560_2078486633_n.jpg" alt="" />
+            </a>
+          </li>
+
+          <li class="insta-list-item">
+            <a href="#">
+              <img src="images/13423637_1610621079250595_310471125_n.jpg" alt="" />
+            </a>
+          </li>
+
+        </ul>
+
+      </div>
+
+    </section>
 
   </section>
 
