baskin rabins finish

--- a/class/webpage/baskinrabins.html
+++ b/class/webpage/baskinrabins.html
@@ -383,56 +383,57 @@
 
   </section>
 
-  <footer>
-    <div>
-      <ul>
-        <li><a href="#">점포개설문의</a></li>
-        <li><a href="#">채용문의</a></li>
-        <li><a href="#">이용약관</a></li>
-        <li><a href="#">개인정보취급방침</a></li>
-        <li><a href="#">거래희망회사 사전등록</a></li>
-      </ul>
-    </div>
+  <footer class="footer">
 
-    <div>
-      <ul>
-        <li>
+    <div class="small-wrap">
+
+      <ul class="terms-list clearfix">
+        <li class="terms-list-item"><a href="#" class="terms-list-link">점포개설문의</a></li>
+        <li class="terms-list-item"><a href="#" class="terms-list-link">채용문의</a></li>
+        <li class="terms-list-item"><a href="#" class="terms-list-link">이용약관</a></li>
+        <li class="terms-list-item"><a href="#" class="terms-list-link">개인정보취급방침</a></li>
+        <li class="terms-list-item"><a href="#" class="terms-list-link">거래희망회사 사전등록</a></li>
+      </ul>
+
+
+      <ul class="aliiance-list clearfix`">
+        <li class="alliance-list-item">
           <a href="#">
             <img src="images/btn_happypoint.png">
           </a>
         </li>
 
-        <li>
+        <li class="alliance-list-item">
           <a href="#">
             <img src="images/btn_celectory.gif">
           </a>
         </li>
 
-        <li>
+        <li class="alliance-list-item">
           <a href="#">
             <img src="images/btn_norton.gif">
           </a>
         </li>
 
-        <li>
+        <li class="alliance-list-item">
           <a href="#">
             <img src="images/btn_ccm.gif">
           </a>
         </li>
 
-        <li>
+        <li class="alliance-list-item">
           <a href="#">
             <img src="images/btn_ksa.png">
           </a>
         </li>
 
-        <li>
+        <li class="alliance-list-item">
           <a href="#">
             <img src="images/btn_happypoint.png">
           </a>
         </li>
 
-        <li>
+        <li class="alliance-list-item">
           <select>
             <option>던킨도너츠</option>
             <option>파리바게트</option>
@@ -447,28 +448,31 @@
         </li>
       </ul>
 
-      
-      <div>
+
+      <div class="footer-logo">
         <img src="images/footer_logo.png"/>
       </div>
 
-      <div>
-        <address>
-          <div>사업자 등록번호 : 303-81-09535</div>
-          <div>(주)비알코리아 대표이사 조상호</div>
-          <div>서울특별시 서초구 남부순환로 2620(양재동 11-149번지)</div>
-          <div>TEL : 080-555-3131</div>
-          <div>개인정보관리책임자:최종영</div>
-          <div>전자우편주소:mun@spc.co.kr</div>
-        </address>
+
+      <div class="address">
+        <div class="top-line">
+          <div class="address-item">사업자 등록번호 : 303-81-09535</div>
+          <div class="address-item">(주)비알코리아 대표이사 조상호</div>
+          <address class="address-item">서울특별시 서초구 남부순환로 2620(양재동 11-149번지)</address>
+        </div>
+        <div class="bottom-line">
+          <div class="address-item">TEL : 080-555-3131</div>
+          <div class="address-item">개인정보관리책임자:최종영</div>
+          <div class="address-item">전자우편주소:mun@spc.co.kr</div>
+        </div>
       </div>
 
-      <div>
+
+      <div class="copyright">
         Copyright &copy; 2016 BRKOREA Company. All Rights Reserved.
       </div>
 
     </div>
-
 
   </footer>
 
