--- a/class/webpage/dothome.html
+++ b/class/webpage/dothome.html
@@ -3,28 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <title>폼요소 연습</title>
+  <link rel="stylesheet" href="css/reset.css" />
+  <link rel="stylesheet" href="css/dothome.css" />
 </head>
 <body>
 
 <div>
 
-  <header>
+  <header class="header">
 
-    <h1>
-      <a href="/"><img src="images/logo.png" alt="호스팅은 닷홈 떠나자! 바다로" /></a>
-    </h1>
+    <div class="inner">
 
-    <div>
+      <h1 class="logo">
+        <a href="/"><img src="images/logo.png" alt="호스팅은 닷홈 떠나자! 바다로" /></a>
+      </h1>
 
-      <ul>
-        <li><a href="#">로그인</a></li>
-        <li><a href="#">회원가입</a></li>
-        <li><a href="#">고객센터</a></li>
-      </ul>
+      <div class="util-wrap clearfix">
 
-      <a href="#" title="페이스북 페이지 바로가기">
-        <img src="images/facebook.png" alt="페이스북 로고" />
-      </a>
+        <ul class="util-member clearfix">
+          <li class="util-member-item"><a href="#">로그인</a></li>
+          <li class="util-member-item"><a href="#">회원가입</a></li>
+          <li class="util-member-item"><a href="#">고객센터</a></li>
+        </ul>
+
+        <a href="#" class="fb-logo" title="페이스북 페이지 바로가기">
+          <img src="images/facebook.png" alt="페이스북 로고" />
+        </a>
+
+      </div>
 
     </div>
 
