--- a/class/webpage/dothome.html
+++ b/class/webpage/dothome.html
@@ -39,73 +39,77 @@
   <nav class="nav">
     <h2 class="nav-heading">네비게이션 영역</h2>
 
-    <ul class="gnb">
-      <li class="gnb-depth1-item">
-        <a href="#" class="gnb-depth1-link">도메인</a>
-        <ul class="gnb-depth2">
-          <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">도메인 신청</a></li>
-          <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">도메인 연장</a></li>
-          <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">도메인 기관이전</a></li>
-          <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">서비스 특징</a></li>
-          <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">부가서비스</a></li>
-        </ul>
-      </li>
-      <li class="gnb-depth1-item">
-        <a href="#" class="gnb-depth1-link">웹호스팅</a>
-        <ul class="gnb-depth2">
-          <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">웹호스팅 안내</a></li>
-          <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">리눅스 호스팅</a></li>
-          <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">워드프레스 호스팅</a></li>
-          <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">XE, 제로보드 호스팅</a></li>
-          <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">단독 웹호스팅</a></li>
-          <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">이미지 호스팅</a></li>
-          <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">무료 호스팅</a></li>
-        </ul>
-      </li>
-      <li class="gnb-depth1-item">
-        <a href="#" class="gnb-depth1-link">무료 홈페이지빌더</a>
-        <ul class="gnb-depth2">
-          <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">홈페이지빌더 신청</a></li>
-          <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">디자인선택</a></li>
-          <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">활용사례</a></li>
-          <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">빌더 무료체험</a></li>
-          <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">기능소개</a></li>
-          <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">사용자데모</a></li>
-          <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">관리자데모</a></li>
-          <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">이용매뉴얼</a></li>
-        </ul>
-      </li>
-      <li class="gnb-depth1-item">
-        <a href="#" class="gnb-depth1-link">메일호스팅</a>
-        <ul class="gnb-depth2">
-          <li class="gnb-depth2-item"><a href="" class="gnb-depth2-link">무제한메일 신청</a></li>
-          <li class="gnb-depth2-item"><a href="" class="gnb-depth2-link">기업보안메일 신청</a></li>
-          <li class="gnb-depth2-item"><a href="" class="gnb-depth2-link">서비스 이용업체</a></li>
-          <li class="gnb-depth2-item"><a href="" class="gnb-depth2-link">서비스 특징</a></li>
-          <li class="gnb-depth2-item"><a href="" class="gnb-depth2-link">스크린샷</a></li>
-        </ul>
-      </li>
-      <li class="gnb-depth1-item">
-        <a href="#" class="gnb-depth1-link">부가서비스</a>
-        <ul class="gnb-depth2">
-          <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">SSL 보안 인증서</a></li>
-          <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">서버 호스팅</a></li>
-          <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">웹 보안 서비스</a></li>
-        </ul>
-      </li>
-      <li class="gnb-depth1-item">
-        <a href="#" class="gnb-depth1-link">마이닷홈</a>
-        <ul class="gnb-depth2">
-          <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">도메인관리</a></li>
-          <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">호스팅관리</a></li>
-          <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">메일관리</a></li>
-          <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">부가관리</a></li>
-          <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">결제내역관리</a></li>
-          <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">회원정보관리</a></li>
-          <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">1:1문의</a></li>
-        </ul>
-      </li>
-    </ul>
+    <div class="inner">
+
+      <ul class="gnb clearfix">
+        <li class="gnb-depth1-item">
+          <a href="#" class="gnb-depth1-link">도메인</a>
+          <ul class="gnb-depth2">
+            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">도메인 신청</a></li>
+            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">도메인 연장</a></li>
+            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">도메인 기관이전</a></li>
+            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">서비스 특징</a></li>
+            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">부가서비스</a></li>
+          </ul>
+        </li>
+        <li class="gnb-depth1-item">
+          <a href="#" class="gnb-depth1-link">웹호스팅</a>
+          <ul class="gnb-depth2">
+            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">웹호스팅 안내</a></li>
+            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">리눅스 호스팅</a></li>
+            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">워드프레스 호스팅</a></li>
+            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">XE, 제로보드 호스팅</a></li>
+            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">단독 웹호스팅</a></li>
+            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">이미지 호스팅</a></li>
+            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">무료 호스팅</a></li>
+          </ul>
+        </li>
+        <li class="gnb-depth1-item">
+          <a href="#" class="gnb-depth1-link">무료 홈페이지빌더</a>
+          <ul class="gnb-depth2">
+            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">홈페이지빌더 신청</a></li>
+            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">디자인선택</a></li>
+            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">활용사례</a></li>
+            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">빌더 무료체험</a></li>
+            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">기능소개</a></li>
+            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">사용자데모</a></li>
+            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">관리자데모</a></li>
+            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">이용매뉴얼</a></li>
+          </ul>
+        </li>
+        <li class="gnb-depth1-item">
+          <a href="#" class="gnb-depth1-link">메일호스팅</a>
+          <ul class="gnb-depth2">
+            <li class="gnb-depth2-item"><a href="" class="gnb-depth2-link">무제한메일 신청</a></li>
+            <li class="gnb-depth2-item"><a href="" class="gnb-depth2-link">기업보안메일 신청</a></li>
+            <li class="gnb-depth2-item"><a href="" class="gnb-depth2-link">서비스 이용업체</a></li>
+            <li class="gnb-depth2-item"><a href="" class="gnb-depth2-link">서비스 특징</a></li>
+            <li class="gnb-depth2-item"><a href="" class="gnb-depth2-link">스크린샷</a></li>
+          </ul>
+        </li>
+        <li class="gnb-depth1-item">
+          <a href="#" class="gnb-depth1-link">부가서비스</a>
+          <ul class="gnb-depth2">
+            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">SSL 보안 인증서</a></li>
+            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">서버 호스팅</a></li>
+            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">웹 보안 서비스</a></li>
+          </ul>
+        </li>
+        <li class="gnb-depth1-item">
+          <a href="#" class="gnb-depth1-link">마이닷홈</a>
+          <ul class="gnb-depth2">
+            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">도메인관리</a></li>
+            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">호스팅관리</a></li>
+            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">메일관리</a></li>
+            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">부가관리</a></li>
+            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">결제내역관리</a></li>
+            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">회원정보관리</a></li>
+            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">1:1문의</a></li>
+          </ul>
+        </li>
+      </ul>
+
+    </div>
 
   </nav>
 
