dothome form wrap

--- a/class/webpage/baskinrabins.html
+++ b/class/webpage/baskinrabins.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>베스킨라빈스 홈페이지</title>
+  <link rel="shortcut icon" href="images/favicon.ico" />
   <link rel="stylesheet" href="css/reset.css" />
   <link rel="stylesheet" href="css/baskinrabins.css" />
   <script src="js/jquery-3.1.0.js"></script>
