--- a/class/webpage/dothome.html
+++ b/class/webpage/dothome.html
@@ -113,116 +113,119 @@
 
   </nav>
 
-  <section>
+  <section class="join-member">
 
-    <h2>컨텐츠 영역</h2>
+    <h2 class="section-heading">컨텐츠 영역</h2>
 
-    <div>
-      <span>
-        <label for="user-id">아이디(필수)</label>
-        <input id="user-id" type="text" title="아이디" placeholder="아이디(필수)" />
-      </span>
-      <button type="button">중복확인</button>
-    </div>
+    <div class="form-wrap">
 
-    <div>
-      <span>
-        <label for="password">비밀번호(필수)</label>
-        <input id="password" type="password" title="비밀번호" placeholder="비밀번호(필수)" />
-      </span>
-      <span>
-        <label for="password-check">비밀번호 확인 (필수)</label>
-        <input id="password-check" type="password" title="비밀번호 확인" placeholder="비밀번호 확인(필수)" />
-      </span>
-    </div>
+      <div>
+        <span>
+          <label for="user-id">아이디(필수)</label>
+          <input id="user-id" type="text" title="아이디" placeholder="아이디(필수)" />
+        </span>
+        <button type="button">중복확인</button>
+      </div>
 
-    <div>
-      영문/숫자/특수문자 중 2가지 포함 8~20자 까지
-    </div>
+      <div>
+        <span>
+          <label for="password">비밀번호(필수)</label>
+          <input id="password" type="password" title="비밀번호" placeholder="비밀번호(필수)" />
+        </span>
+        <span>
+          <label for="password-check">비밀번호 확인 (필수)</label>
+          <input id="password-check" type="password" title="비밀번호 확인" placeholder="비밀번호 확인(필수)" />
+        </span>
+      </div>
 
-    <div>
-      <label for="name">이름(필수)</label>
-      <input id="name" type="text" title="이름" placeholder="이름(필수)" />
-    </div>
+      <div>
+        영문/숫자/특수문자 중 2가지 포함 8~20자 까지
+      </div>
 
-    <div>
-      이름 또는 회사명을 입력해주세요
-    </div>
+      <div>
+        <label for="name">이름(필수)</label>
+        <input id="name" type="text" title="이름" placeholder="이름(필수)" />
+      </div>
 
-    <div>
-      <label for="tel">연락처(필수)</label>
-      <input id="tel" type="text" title="연락처" placeholder="연락처" />
-    </div>
+      <div>
+        이름 또는 회사명을 입력해주세요
+      </div>
 
-    <div>
-      예) 02-123-4567 or 010-1234-5678
-    </div>
+      <div>
+        <label for="tel">연락처(필수)</label>
+        <input id="tel" type="text" title="연락처" placeholder="연락처" />
+      </div>
 
-    <div>
-      <label for="msg">확인문자</label>
-      <input id="msg" type="text" title="확인문자" placeholder="확인문자" />
-    </div>
+      <div>
+        예) 02-123-4567 or 010-1234-5678
+      </div>
 
-    <div>
-      옆에 단어를 입력해주세요
-    </div>
+      <div>
+        <label for="msg">확인문자</label>
+        <input id="msg" type="text" title="확인문자" placeholder="확인문자" />
+      </div>
 
-    <div>
-      <label>기본이메일(필수)</label>
-      <input type="text" title="기본 이메일 앞자리" placeholder="이메일 앞자리" />
-      <span>@</span>
-      <input type="text" title="기본 이메일 뒷자리 - 직접입력" placeholder="이메일 뒷자리(직접입력)" />
-    </div>
+      <div>
+        옆에 단어를 입력해주세요
+      </div>
 
-    <div>
-      서비스만료 및 서비스정보를 메일 또는 문자로 받는데 동의합니다.
-    </div>
+      <div>
+        <label>기본이메일(필수)</label>
+        <input type="text" title="기본 이메일 앞자리" placeholder="이메일 앞자리" />
+        <span>@</span>
+        <input type="text" title="기본 이메일 뒷자리 - 직접입력" placeholder="이메일 뒷자리(직접입력)" />
+      </div>
 
-    <div>
-      <span>
-        <input id="email-check" type="checkbox" />
-        <label for="email-check">이메일</label>
-      </span>
-      <span>
-        <input id="sms" type="checkbox" />
-        <label for="sms">문자</label>
-      </span>
-    </div>
+      <div>
+        서비스만료 및 서비스정보를 메일 또는 문자로 받는데 동의합니다.
+      </div>
 
-    <P>
-      중복회원가입 이용제한, 무료호스팅은 (본인실명 1회)만 가능 합니다.
-    </P>
+      <div>
+        <span>
+          <input id="email-check" type="checkbox" />
+          <label for="email-check">이메일</label>
+        </span>
+        <span>
+          <input id="sms" type="checkbox" />
+          <label for="sms">문자</label>
+        </span>
+      </div>
 
+      <P>
+        중복회원가입 이용제한, 무료호스팅은 (본인실명 1회)만 가능 합니다.
+      </P>
 
-    <div>
-      <span>
-        <input id="usage-terms" type="checkbox" />
-        <label for="usage-terms">이용약관</label>
-        <span>전문보기</span>
-      </span>
+      <div>
+        <span>
+          <input id="usage-terms" type="checkbox" />
+          <label for="usage-terms">이용약관</label>
+          <span>전문보기</span>
+        </span>
 
-      <span>
-        <input id="service-terms" type="checkbox" />
-        <label for="service-terms">서비스 이용약관</label>
-        <span>전문보기</span>
-      </span>
-    </div>
+        <span>
+          <input id="service-terms" type="checkbox" />
+          <label for="service-terms">서비스 이용약관</label>
+          <span>전문보기</span>
+        </span>
+      </div>
 
-    <div>
-      <span>
-        <input id="private" type="checkbox" />
-        <label for="private">개인정보 이용 동의</label>
-        <span>전문보기</span>
-      </span>
+      <div>
+        <span>
+          <input id="private" type="checkbox" />
+          <label for="private">개인정보 이용 동의</label>
+          <span>전문보기</span>
+        </span>
 
-      <span>
-        <input id="all-agree" type="checkbox" />
-        <label for="all-agree">모두 동의합니다.</label>
-      </span>
-    </div>
+        <span>
+          <input id="all-agree" type="checkbox" />
+          <label for="all-agree">모두 동의합니다.</label>
+        </span>
+      </div>
 
-    <div>
-      <button type="button">가입하기</button>
+      <div>
+        <button type="button">가입하기</button>
+      </div>
+
     </div>
 
   </section>
