--- a/class/webpage/dothome.html
+++ b/class/webpage/dothome.html
@@ -119,30 +119,30 @@
 
     <div class="form-wrap">
 
-      <div>
-        <span>
-          <label for="user-id">아이디(필수)</label>
-          <input id="user-id" type="text" title="아이디" placeholder="아이디(필수)" />
+      <div class="mid-margin-bottom clearfix">
+        <span class="left-float">
+          <label for="user-id" class="blind">아이디(필수)</label>
+          <input id="user-id" type="text" title="아이디" placeholder="아이디(필수)" class="input-text width-id" />
         </span>
-        <button type="button">중복확인</button>
+        <button type="button" class="btn btn-overlap right-float">중복확인</button>
       </div>
 
-      <div>
-        <span>
-          <label for="password">비밀번호(필수)</label>
-          <input id="password" type="password" title="비밀번호" placeholder="비밀번호(필수)" />
+      <div class="mid-margin-bottom clearfix">
+        <span class="left-float width-half">
+          <label for="password" class="blind">비밀번호(필수)</label>
+          <input id="password" type="password" title="비밀번호" placeholder="비밀번호(필수)" class="input-text width-full" />
         </span>
-        <span>
-          <label for="password-check">비밀번호 확인 (필수)</label>
-          <input id="password-check" type="password" title="비밀번호 확인" placeholder="비밀번호 확인(필수)" />
+        <span class="right-float width-half">
+          <label for="password-check" class="blind">비밀번호 확인 (필수)</label>
+          <input id="password-check" type="password" title="비밀번호 확인" placeholder="비밀번호 확인(필수)" class="input-text width-full" />
         </span>
       </div>
 
-      <div>
+      <div class="form-desc">
         영문/숫자/특수문자 중 2가지 포함 8~20자 까지
       </div>
 
-      <div>
+      <div class="mid-margin-bottom top-border">
         <label for="name">이름(필수)</label>
         <input id="name" type="text" title="이름" placeholder="이름(필수)" />
       </div>
