--- a/class/webpage/sunmoon.html
+++ b/class/webpage/sunmoon.html
@@ -149,7 +149,7 @@
 
           <fieldset class="search">
             <legend class="search-heading">검색</legend>
-            <input type="text" class="search-input" />
+            <input type="text" class="search-input" placeholder="통합검색" />
             <button type="button" class="search-button">검색</button>
           </fieldset>
 
