sunmoon contents working

--- a/class/webpage/sunmoon.html
+++ b/class/webpage/sunmoon.html
@@ -163,15 +163,18 @@
 
 
 
-  <div>
+  <div class="top-visual">
 
-    <h2><img src="images/sub_visual01.jpg" alt="선문을 넘은 선문의 이야기가 재창조됩니다." /></h2>
+    <h2>
+      <p class="slogan-1">선문을 넘은 선문의 이야기가 재창조됩니다.</p>
+      <p class="slogan-2">Re-create Yourself @ SUN MOON</p>
+    </h2>
 
   </div>
 
-  <div>
+  <div class="inner clearfix">
 
-    <nav>
+    <nav class="lnb">
 
       <h2>학교소개</h2>
       <ul>
@@ -187,7 +190,7 @@
 
     </nav>
 
-    <section>
+    <section class="contents">
 
       <h3>건학이념</h3>
 
