--- a/class/webpage/sunmoon.html
+++ b/class/webpage/sunmoon.html
@@ -172,11 +172,12 @@
 
   </div>
 
-  <div class="inner clearfix">
+  <div class="inner clearfix mt36">
 
     <nav class="lnb">
 
       <h2>학교소개</h2>
+
       <ul>
         <li><a href="">총장실</a></li>
         <li><a href="">역사/이념</a></li>
