sunmoon lnb finish

--- a/class/webpage/sunmoon.html
+++ b/class/webpage/sunmoon.html
@@ -180,7 +180,7 @@
 
       <ul>
         <li><a href="">총장실</a></li>
-        <li><a href="">역사/이념</a></li>
+        <li><a href="" class="on">역사/이념</a></li>
         <li><a href="">대학비전</a></li>
         <li><a href="">대학특성화</a></li>
         <li><a href="">대학현황</a></li>
