--- a/class/webpage/sunmoon.html
+++ b/class/webpage/sunmoon.html
@@ -195,15 +195,15 @@
 
       <h3>건학이념</h3>
 
-      <h4>선문대학교의 건학이념은 애천ㆍ애인ㆍ애국입니다.</h4>
+      <h4>선문대학교의 건학이념은<br /><span class="font-blue">애천ㆍ애인ㆍ애국</span><br />입니다.</h4>
 
-      <p>이는 우리나라 교육이념인'홍익인간'의 이념과 우리나라의 교육목적인 '인격도야, 자주적 생활능력 함양, 민주 시민적 자질 함양, 인간다운 삶 영위, 민주국가발전에 공헌, 인류공영의 이상실현'을 달성하는 기초이념이 되며, 우리대학의 교육목적과 교육목표의 근간이 된다.</p>
+      <p>이는 우리나라 교육이념인<em>'홍익인간'</em>의 이념과 우리나라의 교육목적인 <strong>'인격도야, 자주적 생활능력 함양, 민주 시민적 자질 함양, 인간다운 삶 영위, 민주국가발전에 공헌, 인류공영의 이상실현'</strong>을 달성하는 기초이념이 되며, 우리대학의 교육목적과 교육목표의 근간이 된다.</p>
 
       <p>우리대학의 건학이념인 '애천·애인·애국'의 뿌리는 '참사랑'이다. 모든 인류가 종교가 추구해왔던 근원자인 하나님의 참사랑을 가장 귀한 가치로 세웠다. 참사랑은 진선미의 바탕이 되며 영원 불변 절대적인 사랑이며 조건 없이 상대를 위해주는 순수하고 아름다운 희생적 사랑이다. 참사랑을 느끼고 생활속에서 실천할 때 인간은 행복하게 되고 생명력이 약동하며 기쁨이 생겨나게 된다. 참사랑에 의해 태어난 인간은 참사랑의 속성에 따라 '위하는 삶'을 추구함으로써 영원한 행복의 세계에 들어가게 된다. 이것이 하나님의 뜻이요, 인간이 바라는 본연의 이상이다.</p>
 
       <img src="images/founding_ph_img01.png" alt="선문대학교의 건학이념은 애천ㆍ애인ㆍ애국" />
 
-      <ul>
+      <ul class="clearfix">
         <li>
 
           <dl>
