sunmoons footer finish

--- a/class/webpage/sunmoon.html
+++ b/class/webpage/sunmoon.html
@@ -236,39 +236,49 @@
 
   <footer>
 
-    <div>
-      <ul>
-        <li><a href="">개인정보처리방침</a></li>
-        <li><a href="">이메일무단수집거부</a></li>
-        <li><a href="">대학정보공시</a></li>
-        <li><a href="">찾아오시는길</a></li>
-      </ul>
+    <div class="footer-top clearfix">
 
-      <ul>
-        <li><a href="">원격지원</a></li>
-        <li><a href="">교내웹사이트</a></li>
-      </ul>
-    </div>
+      <div class="inner">
 
-    <div>
+        <ul class="terms">
+          <li><a href="">개인정보처리방침</a></li>
+          <li><a href="">이메일무단수집거부</a></li>
+          <li><a href="">대학정보공시</a></li>
+          <li><a href="">찾아오시는길</a></li>
+        </ul>
 
-      <address>
-        <div>우)31460 충남 아산시 탕정면 선문로 221번길 70 선문대학교</div>
-        <div>Tel. 041-530-2114</div>
-        <div>Fax. 041-541-7424</div>
-      </address>
+        <ul class="outlink">
+          <li><a href="">원격지원</a></li>
+          <li><a href="">교내웹사이트</a></li>
+        </ul>
 
-      <ul>
-        <li><a href=""><img src="images/foot_sns01.png" /></a></li>
-        <li><a href=""><img src="images/foot_sns02.png" /></a></li>
-        <li><a href=""><img src="images/foot_sns03.png" /></a></li>
-        <li><a href=""><img src="images/foot_sns04.png" /></a></li>
-      </ul>
+      </div>
 
     </div>
 
-    <div>
-      Copyright&copy; 2015 SUN MOON University. All rights reserved.
+    <div class="footer-bottom">
+
+      <div class="inner">
+
+        <address class="address clearfix">
+          <div>우)31460 충남 아산시 탕정면 선문로 221번길 70 선문대학교</div>
+          <div>Tel. 041-530-2114</div>
+          <div>Fax. 041-541-7424</div>
+        </address>
+
+        <ul class="sns clearfix">
+          <li><a href=""><img src="images/foot_sns01.png" /></a></li>
+          <li><a href=""><img src="images/foot_sns02.png" /></a></li>
+          <li><a href=""><img src="images/foot_sns03.png" /></a></li>
+          <li><a href=""><img src="images/foot_sns04.png" /></a></li>
+        </ul>
+
+        <div class="copyright">
+          Copyright&copy; 2015 SUN MOON University. All rights reserved.
+        </div>
+
+      </div>
+
     </div>
 
   </footer>
