sunmoon gnb working 1

--- a/class/webpage/sunmoon.html
+++ b/class/webpage/sunmoon.html
@@ -12,14 +12,14 @@
 
     <div class="inner">
 
-      <h1>
+      <h1 class="logo">
         <img src="images/logo2.png" alt="선문대학교 로고" />
       </h1>
 
-      <nav>
+      <nav class="gnb">
 
-        <ul>
-          <li>
+        <ul class="gnb-depth1">
+          <li class="gnb-depth1-item">
             <a href="">학교소개</a>
             <ul>
               <li>
@@ -43,7 +43,7 @@
               </li>
             </ul>
           </li>
-          <li>
+          <li class="gnb-depth1-item">
             <a href="">입학안내</a>
             <ul>
               <li><a href="">대학</a></li>
@@ -51,7 +51,7 @@
               <li><a href="">한국어교육원</a></li>
             </ul>
           </li>
-          <li>
+          <li class="gnb-depth1-item">
             <a href="">대학/대학원</a>
             <ul>
               <li>
@@ -76,13 +76,13 @@
               </li>
             </ul>
           </li>
-          <li>
+          <li class="gnb-depth1-item">
             <a href="">산학연구</a>
             <ul>
               <li><a href="">산학연구</a></li>
             </ul>
           </li>
-          <li>
+          <li class="gnb-depth1-item">
             <a href="">대학생활</a>
             <ul>
               <li><a href="">학사일정</a></li>
@@ -106,7 +106,7 @@
               </li>
             </ul>
           </li>
-          <li>
+          <li class="gnb-depth1-item">
             <a href="">SM Story</a>
             <ul>
               <li><a href="">선문뉴스</a></li>
@@ -160,8 +160,6 @@
     </div>
 
   </header>
-
-
 
   <div class="top-visual">
 
