sunmoon gnb working 3

--- a/class/webpage/sunmoon.html
+++ b/class/webpage/sunmoon.html
@@ -20,7 +20,7 @@
 
         <ul class="gnb-depth1">
           <li class="gnb-depth1-item">
-            <a href="" class="gnb-depth1-link">학교소개</a>
+            <a href="" class="gnb-depth1-link current">학교소개</a>
             <ul class="gnb-depth2">
               <li class="gnb-depth2-item">
                 <a href="" class="gnb-depth2-link">총장실</a>
