--- a/class/webpage/sunmoon.html
+++ b/class/webpage/sunmoon.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/sunmoon.css" />
 </head>
 <body>
-<div>
+<div class="wrap">
   <header class="header">
 
     <div class="inner">
