--- a/mobis/html/main.html
+++ b/mobis/html/main.html
@@ -102,136 +102,146 @@
     </div>
   </header>
 
-  <section class="visual">
+  <section class="visual fix-width">
     <h2 class="blind">모비스 사회공헌 4가지 슬로건</h2>
-    <div class="inner">
-      <ul class="visual-list">
-        <li class="visual-item">
-          <dl>
-            <dt>SAFE MOVE</dt>
-            <dd>현대모비스의 중점 사회공헌 사업인 투명우산 나눔은 우리의 미래이자 희망인 어린이들을 교통사고 위험으로부터 보호하고자 시작했습니다.</dd>
-          </dl>
-        </li>
-      </ul>
+    <ul class="visual-list">
+      <li class="visual-item">
+        <dl class="visual-text">
+          <dt class="visual-text-title">SAFE MOVE</dt>
+          <dd class="visual-text-desc">현대모비스의 중점 사회공헌 사업인 투명우산 나눔은 우리의 미래이자 희망인 어린이들을 교통사고 위험으로부터 보호하고자 시작했습니다.</dd>
+        </dl>
+      </li>
+    </ul>
+    <div class="indicator-wrap">
       <ul class="indicator">
-        <li class="indicator-item"><button type="button" class="indicator-btn">1</button></li>
+        <li class="indicator-item"><button type="button" class="indicator-btn on">1</button></li>
         <li class="indicator-item"><button type="button" class="indicator-btn">2</button></li>
         <li class="indicator-item"><button type="button" class="indicator-btn">3</button></li>
         <li class="indicator-item"><button type="button" class="indicator-btn">4</button></li>
       </ul>
-      <button type="button" class="play-ctrl pause">pause</button>
+      <button type="button" class="play-ctrl">pause</button>
     </div>
   </section>
 
-  <section class="contribution">
+  <section class="contribution fix-width">
     <h2 class="blind">모비스 사회공헌 내용/기사</h2>
-    <div class="inner">
-      <div class="arrow">
-        <button type="button" class="arrow-btn left">left</button>
-        <button type="button" class="arrow-btn right">right</button>
-      </div>
-      <section class="contribution-section">
+    <div class="arrow">
+      <button type="button" class="arrow-btn">left</button>
+      <button type="button" class="arrow-btn right">right</button>
+    </div>
+    <section class="contribution-section">
 
+      <div class="contribution-heading-wrap">
         <h3 class="contribution-heading">투명우산 나눔</h3>
+      </div>
 
-        <div class="clearfix">
+      <div class="clearfix">
 
-          <div class="col-left">
-            <article class="postscript">
-              <h4 class="postscript-heading">참여후기</h4>
-              <a href="" class="postscript-image">
+        <div class="col-left">
+          <article class="postscript">
+            <h4 class="postscript-heading">참여후기</h4>
+            <a href="" class="postscript-link">
+              <span class="postscript-image">
                 <img src="../images/3AQpt.jpg" alt="2015년 투명우산 나눔활동 후기공모 대상사진" />
-                <span class="postscript-heading-sub">2015년 투명우산 나눔활동 후기공모</span>
-                <span class="postscript-description">대상 : 서재초등학교 4학년 박정원   최우수상 : 천천초등학교 4학년 진주영   최우수상 : 서재초등학교 4학년 박정원</span>
-              </a>
-            </article>
-            <p class="together">현대모비스의 세이프무브 함께하시겠어요?</p>
-          </div>
-
-          <div class="col-right">
-            <div class="clearfix">
-              <article class="gallery-photo">
-                <h4 class="blind">사진 갤러리</h4>
-                <ul class="photo-list">
-                  <li>
-                    <a href="#">
-                      <img src="../images/PcClJ.jpg" class="photo-image" alt="2016년 상반기 투명우산나눔-교통안전교육 단체사진" />
-                      <span class="photo-heading">2016년 상반기 투명우산나눔-교통안전교육</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <img src="../images/rkJfP.jpg" class="photo-image" alt="2015년 투명우산 나눔활동 후기공모전 당선작 대상 사진" />
-                      <span class="photo-heading">2015년 투명우산 나눔활동 후기공모전 당선작_그림</span>
-                    </a>
-                  </li>
-                </ul>
-              </article>
-              <article class="gallery-video">
-                <h4 class="blind">홍보 동영상</h4>
-                <a href="#" class="gallery-video-link">투명우산 캠페인 영상보기</a>
-              </article>
-            </div>
-            <div class="press">
-              <h4 class="press-heading">관련 보도자료</h4>
-              <article>
-                <ul>
-                  <li>
-                    <a href="#">
-                      <span class="press-heading-sub">“어린이 교통사고 예방” 투명우산 연10만개 나눔<span class="icon-new">new</span></span>
-                      <span class="date">2016.02.16</span>
-                      <span class="press-description">현대모비스는 지역사회에 대한 책임의식을 바탕으로 자동차 부품기업의 강점을 살린 다양한 사회공헌활동을 국내외로 확대 전개하고 있다.</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <span class="press-heading-sub">현대모비스, “착한 아이디어로 투명우산 기부하세요" 투명우산 활용한 UCC 공모전 개최<span class="icon-new">new</span></span>
-                      <span class="date">2016.02.16</span>
-                      <span class="press-description">현대모비스가 어린이 교통안전에 대한 사회적 관심을 확대하기 위한 ‘투명우산 UCC 공모전’을 오는 7월31일까지 개최한다고 30일 밝혔다.</span>
-                    </a>
-                  </li>
-                </ul>
-              </article>
-            </div>
-          </div>
+              </span>
+              <span class="postscript-heading-sub">2015년 투명우산 나눔활동 후기공모</span>
+              <span class="postscript-description">대상 : 서재초등학교 4학년 박정원   최우수상 : 천천초등학교 4학년 진주영   최우수상 : 서재초등학교 4학년 박정원</span>
+            </a>
+          </article>
+          <p class="together">현대모비스의 세이프무브 함께하시겠어요?</p>
         </div>
 
-      </section>
-    </div>
+        <div class="col-right">
+          <div class="gallery clearfix">
+            <article class="gallery-photo">
+              <h4 class="blind">사진 갤러리</h4>
+              <ul class="photo-list">
+                <li class="photo-list-item">
+                  <a href="#" class="photo-list-link">
+                    <img src="../images/PcClJ.jpg" class="photo-image" alt="2016년 상반기 투명우산나눔-교통안전교육 단체사진" />
+                    <span class="photo-heading">2016년 상반기 투명우산나눔-교통안전교육</span>
+                  </a>
+                </li>
+                <li class="photo-list-item">
+                  <a href="#" class="photo-list-link">
+                    <img src="../images/rkJfP.jpg" class="photo-image" alt="2015년 투명우산 나눔활동 후기공모전 당선작 대상 사진" />
+                    <span class="photo-heading">2015년 투명우산 나눔활동 후기공모전 당선작_그림</span>
+                  </a>
+                </li>
+              </ul>
+              <a href="#" class="photo-more-link">포토갤러리 더보기</a>
+            </article>
+            <article class="gallery-video">
+              <h4 class="blind">홍보 동영상</h4>
+              <a href="#" class="gallery-video-link">투명우산 캠페인 영상보기</a>
+            </article>
+          </div>
+          <div class="press">
+            <h4 class="press-heading">관련 보도자료</h4>
+            <article class="press-wrap">
+              <ul class="press-list">
+                <li class="press-list-item col-left">
+                  <a href="#" class="press-list-link">
+                    <span class="press-heading-sub">“어린이 교통사고 예방” 투명우산 연10만개 나눔<span class="icon-new">new</span></span>
+                    <span class="date">2016.02.16</span>
+                    <span class="press-description">현대모비스는 지역사회에 대한 책임의식을 바탕으로 자동차 부품기업의 강점을 살린 다양한 사회공헌활동을 국내외로 확대 전개하고 있다.</span>
+                  </a>
+                </li>
+                <li class="press-list-item col-right">
+                  <a href="#" class="press-list-link">
+                    <span class="press-heading-sub">현대모비스, “착한 아이디어로 투명우산 기부하세요" 투명우산 활용한 UCC 공모전 개최<span class="icon-new">new</span></span>
+                    <span class="date">2016.02.16</span>
+                    <span class="press-description">현대모비스가 어린이 교통안전에 대한 사회적 관심을 확대하기 위한 ‘투명우산 UCC 공모전’을 오는 7월31일까지 개최한다고 30일 밝혔다.</span>
+                  </a>
+                </li>
+              </ul>
+            </article>
+          </div>
+        </div>
+      </div>
+
+    </section>
   </section>
 
   <section class="contribution-part">
-    <h2 class="contribution-part-heading">국내 사회공헌</h2>
+    <div class="inner">
+      <h2 class="contribution-part-heading">국내 사회공헌</h2>
 
-    <ul class="part-list">
-      <li class="part-list-item">
-        <a href="#" class="part-list-link">
-          <span>어린이 교통안전</span>
-          <span>투명우산 나눔</span>
-        </a>
-      </li>
-      <li class="part-list-item">
-        <a href="#" class="part-list-link">
-          <span>더불어 성장하는 배움 공동체</span>
-          <span>주니어 공학교실</span>
-        </a>
-      </li>
-      <li class="part-list-item">
-        <a href="#" class="part-list-link">
-          <span>기업의 지역가치 복원</span>
-          <span>미르숲 조성</span>
-        </a>
-      </li>
-      <li class="part-list-item">
-        <a href="#" class="part-list-link">
-          <span>모두에게 이동과 참여의 자유를!</span>
-          <span>장애아동 이동편의 지원</span>
-        </a>
-      </li>
-    </ul>
+      <ul class="part-list clearfix">
+        <li class="part-list-item">
+          <a href="#" class="part-list-link">
+            <span>어린이 교통안전</span>
+            <span>투명우산 나눔</span>
+          </a>
+        </li>
+        <li class="part-list-item">
+          <a href="#" class="part-list-link">
+            <span>더불어 성장하는 배움 공동체</span>
+            <span>주니어 공학교실</span>
+          </a>
+        </li>
+        <li class="part-list-item">
+          <a href="#" class="part-list-link">
+            <span>기업의 지역가치 복원</span>
+            <span>미르숲 조성</span>
+          </a>
+        </li>
+        <li class="part-list-item">
+          <a href="#" class="part-list-link">
+            <span>모두에게 이동과 참여의 자유를!</span>
+            <span>장애아동 이동편의 지원</span>
+          </a>
+        </li>
+      </ul>
+
+      <div class="arrow">
+        <button type="button" class="arrow-btn">left</button>
+        <button type="button" class="arrow-btn right">right</button>
+      </div>
+    </div>
   </section>
 
-  <section class="info">
+  <section class="info fix-width clearfix">
 
     <article class="notice">
 
@@ -241,19 +251,24 @@
 
         <li class="notice-list-item">
           <a href="#" class="notice-list-link">
-            <span class="notice-heading">투명우산 UCC 공모전 안내</span>
+            <span class="notice-heading-sub">투명우산 UCC 공모전 안내</span>
             <span class="notice-date">2016.06.16</span>
           </a>
         </li>
 
         <li class="notice-list-item">
           <a href="#" class="notice-list-link">
-            <span class="notice-heading">6월 미르숲 「bloom bloom」음악회에 여러분들을 초대합니다.</span>
+            <span class="notice-heading-sub">6월 미르숲 「bloom bloom」음악회에 여러분들을 초대합니다.</span>
             <span class="notice-date">2016.06.16</span>
           </a>
         </li>
 
       </ul>
+
+      <div class="arrow">
+        <button type="button" class="arrow-btn">left</button>
+        <button type="button" class="arrow-btn right">right</button>
+      </div>
 
     </article>
 
@@ -272,7 +287,7 @@
       <div class="col-left">
         <h3 class="webzine-heading">웹진</h3>
 
-        <p class="webzine-dexcription">CSR웹진 7월호</p>
+        <p class="webzine-description">CSR웹진 7월호</p>
 
         <a class="webzine-link">자세히보기</a>
       </div>
@@ -285,33 +300,37 @@
 
   </section>
 
-  <footer class="footer">
+  <footer class="footer clearfix">
 
-    <div class="col-left">
-      <ul class="fList">
-        <li><a href="#">이용약관</a></li>
-        <li><a href="#">이메일주소무단수집거부</a></li>
-        <li><a href="#">사이트맵</a></li>
-        <li><a href="#" target="_blank">사이버감사실</a></li>
-      </ul>
-      <p class="copy">COPYRIGHT 2015. HYUNDAI MOBIS. ALL RIGHTS RESERVED.</p>
-    </div>
+    <div class="inner">
 
-    <div class="col-right">
-
-      <div class="family-site-select">
-        <button class="family-site-btn">family site</button>
-
-        <ul class="family-site-list">
-          <li class="family-site-item"><input type="radio" id="ra1" checked /><label for="ra1"></label>모비스홈페이지</label></li>
-          <li class="family-site-item"><input type="radio" id="ra2" /><label for="ra2"></label>모비스존</label></li>
-          <li class="family-site-item"><input type="radio" id="ra3" /><label for="ra3"></label>채용사이트</label></li>
-          <li class="family-site-item"><input type="radio" id="ra4" /><label for="ra4"></label>MCARFE</label></li>
-          <li class="family-site-item"><input type="radio" id="ra5" /><label for="ra5"></label>피버스농구단</label></li>
+      <div class="col-left">
+        <ul class="term-list clearfix">
+          <li class="term-list-item"><a href="#" class="term-list-link">이용약관</a></li>
+          <li class="term-list-item"><a href="#" class="term-list-link">이메일주소무단수집거부</a></li>
+          <li class="term-list-item"><a href="#" class="term-list-link">사이트맵</a></li>
+          <li class="term-list-item"><a href="#" class="term-list-link" target="_blank">사이버감사실</a></li>
         </ul>
+        <p class="copy">COPYRIGHT 2015. HYUNDAI MOBIS. ALL RIGHTS RESERVED.</p>
       </div>
 
-      <button type="button" class="family-link">이동</button>
+      <div class="col-right">
+
+        <div class="family-site-select">
+          <button class="family-site-btn">family site</button>
+
+          <ul class="family-site-list">
+            <li class="family-site-item"><input type="radio" id="ra1" checked /><label for="ra1">모비스홈페이지</label></li>
+            <li class="family-site-item"><input type="radio" id="ra2" /><label for="ra2">모비스존</label></li>
+            <li class="family-site-item"><input type="radio" id="ra3" /><label for="ra3">채용사이트</label></li>
+            <li class="family-site-item"><input type="radio" id="ra4" /><label for="ra4">MCARFE</label></li>
+            <li class="family-site-item"><input type="radio" id="ra5" /><label for="ra5">피버스농구단</label></li>
+          </ul>
+        </div>
+
+        <button type="button" class="family-link">이동</button>
+      </div>
+
     </div>
 
   </footer>
