--- a/mobis/html/main.html
+++ b/mobis/html/main.html
@@ -145,6 +145,11 @@
               <span class="postscript-heading-sub">2015년 투명우산 나눔활동 후기공모</span>
               <span class="postscript-description">대상 : 서재초등학교 4학년 박정원   최우수상 : 천천초등학교 4학년 진주영   최우수상 : 서재초등학교 4학년 박정원</span>
             </a>
+            <ul class="postscript-paging clearfix">
+              <li class="postscript-paging-item"><a href="#" class="postscript-paging-link on">1</a></li>
+              <li class="postscript-paging-item"><a href="#" class="postscript-paging-link">2</a></li>
+              <li class="postscript-paging-item"><a href="#" class="postscript-paging-link">3</a></li>
+            </ul>
           </article>
           <p class="together">현대모비스의 세이프무브 함께하시겠어요?</p>
         </div>
