--- a/class/js/basic/_04-3_loop_99dan_02.html
+++ b/class/js/basic/_04-3_loop_99dan_02.html
@@ -15,7 +15,7 @@
 
                   result = parseInt(dan) * i;
 
-                  var node = document.createTextNode(dan + '*' + i + '=' + result);
+                  var node = document.createTextNode(dan + '×' + i + '=' + result);
 
                   var div = document.createElement('div');
 
